Zero builds fail after JDK-8207343 (Automate vtable/itable stub size calculation)

XMLWordPrintable

    • b10

        * For target hotspot_variant-zero_libjvm_objs_vtableStubs_zero.o:
        /home/shade/jdk-jdk/src/hotspot/cpu/zero/vtableStubs_zero.cpp:40:55: error: no 'int VtableStub::pd_code_size_limit(bool)' member function declared in class 'VtableStub'
         int VtableStub::pd_code_size_limit(bool is_vtable_stub) {
                                                               ^

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: