8210357: Zero builds fail after JDK-8207343 (Automate vtable/itable stub size calculation)

Reviewed-by: thartmann