src/hotspot/cpu/zero/vtableStubs_zero.cpp
@@ -37,11 +37,6 @@ VtableStub* VtableStubs::create_itable_stub(int vtable_index) {
   return NULL;
 }
 
-int VtableStub::pd_code_size_limit(bool is_vtable_stub) {
-  ShouldNotCallThis();
-  return 0;
-}
-
 int VtableStub::pd_code_alignment() {
   ShouldNotCallThis();
   return 0;
